--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
   <head>
     <title>Hello World</title> 
   </head>
-
   <body> 
     <h1>Hello World khalifa mohamed welcome aboard</h1> 
-    <p>total energy ni company hatari ya oil na vilainishi hapa Tanzania..karibu tukuhudumie</p> 
+    <p>total energy ni company hatari ya oil na vilainishi hapa Tanzania..karibu tukuhudumie</p>
+    <ul>
+      <li>khalifa mohamed</li>
+      <li>Juma Khamis</li>
+      <li>Mwanaisha Hamis</li>
+    </ul> 
+    <h1>tables</h1>
+    <table>
+      <tr>
+        <th>first name |</th>
+        <th>Second name |</th>
+        <th>Email</th>
+      </tr>
+
+      <tr>
+        <td>khalifa</td>
+        <td>Juma</td>
+        <td>Mwanaisha</td>
+      </tr>
+
+      <tr>
+        <td>khalifa</td>
+        <td>Juma</td>
+        <td>Mwanaisha</td>
+      </tr>
+
+      <tr>
+        <td>khalifa</td>
+        <td>Juma</td>
+        <td>Mwanaisha</td>
+      </tr>
+    </table>
   </body>
 </html>
