--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html> 
   <head>
     <title>Hello World</title> 
+    <style>
+      p {
+        color:red;
+        text-align: center;
+      }
+    </style>
   </head>
   <body> 
     <h1>Hello World khalifa mohamed welcome aboard</h1> 
